k8s/platform/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: llm-platform-gateway
  namespace: gateway-api
spec:
  gatewayClassName: gke-l7-global-external-managed
  addresses:                              
  - type: NamedAddress
    value: llm-platform-gateway-global-ip
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All # allows HTTPRoutes from any namespace to attach
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: gateway-tls
            namespace: gateway-api
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
